--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  margin: 40px;
+}
+
+.wrapper {
+  display: grid;
+  grid-template-columns: 100px 100px 100px;
+  grid-gap: 10px;
+  background-color: #fff;
+  color: #444;
+
+}
+
+.box {
+  background-color: #444;
+  color: #fff;
+  border-radius: 1rem;
+  padding: 2rem;
+  font-size: 150%;
+  display: flex;
+  justify-content: center;
+
+}
